--- a/index.html
+++ b/index.html
@@ -4,51 +4,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
+    
     <title>Portfolio Juan Carlos Canosa</title>
 </head>
 <body>
-    <header>
-        <h1>Juan Carlos Canosa</h1>
-        <p>Desarrollador web</p>
-    </header>
+    <div class="contenedor no-webp">
+        <header class="header centrar-texto">
+            <div class="titulo">
+                <h1 class="header-titulo">Juan Carlos Canosa</h1>
+                <p class="header-texto">Desarrollador web</p>
+            </div>
 
-    <nav>
-        <ul>
-            <li>Formación</li>
-            <li>Proyectos</li>
-            <li>Experiencia</li>
-            <li>Redes</li>
-            <li>CV</li>
-        </ul>
-    </nav>
+            <div class="fotoPerfil">
+                <picture>
+                    <source srcset="img/perfil1.avif" type="image/avif">
+                    <source srcset="img/perfil1.webp" type="image/webp">
+                    <img loading="lazy" width="200" height="300" src="img/perfil1.png" alt="foto de perfil">
+                </picture>
+            </div>
+        </header>
 
-    <section>
-        <p>Hola! Mi nombre es Juan Carlos Canosa y estoy camino de convertirme en desarrollador web.
-            Llevo muchos años trabajando como recambista, pero mi pasión es la tecnología, por eso me estoy 
-            formando para llegar a ser desarrollador web full-stack.
-        </p>
-        <p>
-            Por el momento estoy realizado varios cursos por mi cuenta que podrás ver en la sección de Formación de 
-            esta misma página, entre ellos un CFGS de desarrollo de aplicaciones web en Ilerna, que estoy a punto de 
-            terminar, lo que me llevará a hacer el CFGS de desarrollo multiplataforma.
-        </p>
-        <p>Entre las aptitudes que he podido ir adquiriendo hasta el momento se encuentran, HTML, CSS, estoy comenzando a ver JavaScript, Java, SQL, XML y algún otro lenguaje que forma parte tanto de la formación académica reglada que estoy cursando, como de los cursos que hago por mi cuenta.</p>
-        <p>Muchas gracias por visitar mi página personal, espero que nos veamos muy pronto!</p>
-    </section>
+        <nav class="navegacion">
+            <a href="#">Formación</a>
+            <a href="#">Proyectos</a>
+            <a href="#">Experiencia</a>
+            <a href="#">Contacto</a>
+            <a href="#">CV</a>
+        </nav>
 
-    <div>
-        <picture>
-            <source srcset="img/perfil1.avif" type="image/avif">
-            <source srcset="img/perfil1.webp" type="image/webp">
-            <img src="img/perfil1.png" alt="foto de perfil">
-        </picture>
+        <section class="presentacion">
+            <p>Hola! Mi nombre es Juan Carlos Canosa y estoy camino de convertirme en desarrollador web.
+                Llevo muchos años trabajando como recambista, pero mi pasión es la tecnología, por eso me estoy 
+                formando para llegar a ser desarrollador web full-stack.
+            </p>
+            <p>
+                Por el momento estoy realizado varios cursos por mi cuenta que podrás ver en la sección de Formación de 
+                esta misma página, entre ellos un CFGS de desarrollo de aplicaciones web en Ilerna, que estoy a punto de 
+                terminar, lo que me llevará a hacer el CFGS de desarrollo multiplataforma.
+            </p>
+            <p>Entre las aptitudes que he podido ir adquiriendo hasta el momento se encuentran, HTML, CSS, estoy comenzando a ver JavaScript, Java, SQL, XML y algún otro lenguaje que forma parte tanto de la formación académica reglada que estoy cursando, como de los cursos que hago por mi cuenta.</p>
+            <p>Muchas gracias por visitar mi página personal, espero que nos veamos muy pronto!</p>
+        </section>
+
+
+
+        <div>
+            
+        </div>
     </div>
-
-    <div>
-        <!-- redes -->
-    </div>
-
 
 
 
