--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     
     <title>Portfolio Juan Carlos Canosa</title>
 </head>
+
 <body>
     <div class="contenedor">
         <header class="header centrar-texto">
@@ -28,17 +29,19 @@
                 </picture>
             </div>
             <nav class="navegacion">
-                <a href="#">Formación</a>
-                <a href="#">Proyectos</a>
-                <a href="#">Experiencia</a>
-                <a href="#">Contacto</a>
-                <a href="#">CV</a>
+                <ul class="no-margin no-padding">
+                    <li><a href="#">Formación</a></li>
+                    <li><a href="#">Proyectos</a></li>
+                    <li><a href="#">Experiencia</a></li>
+                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#">CV</a></li>
+                </ul>
             </nav>
         </header>
 
 
 
-        <section class="presentacion">
+        <main class="contenido">
             <p>Hola! Mi nombre es Juan Carlos Canosa y estoy camino de convertirme en desarrollador web.
                 Llevo muchos años trabajando como recambista, pero mi pasión es la tecnología, por eso me estoy 
                 formando para llegar a ser desarrollador web full-stack.
@@ -50,7 +53,7 @@
             </p>
             <p>Entre las aptitudes que he podido ir adquiriendo hasta el momento se encuentran, HTML, CSS, PHP, JavaScript, Java, SQL, XML y algún otro lenguaje que forma parte tanto de la formación académica reglada que estoy cursando, como de los cursos que hago por mi cuenta.</p>
             <p>Muchas gracias por visitar mi página personal, espero que nos veamos muy pronto!</p>
-        </section>
+        </main>
 
 
         <footer class="header centrar-texto">
