--- a/contacto.html
+++ b/contacto.html
@@ -30,12 +30,29 @@
             </div>
             <nav class="navegacion">
                 <ul class="no-margin no-padding">
-                    <li><a href="index.php">Presentación</a></li>
-                    <li><a href="formacion.php">Formación</a></li>
-                    <li><a href="proyectos.php">Proyectos</a></li>
-                    <li><a href="experiencia.php">Experiencia</a></li>
-                    <li><a href="contacto.php">Contacto</a></li>
-                    <li><a href="cv.php">CV</a></li>
+                    <li><a href="index.html">Presentación</a></li>
+                    <li><a href="formacion.html">Formación</a></li>
+                    <li><a href="proyectos.html">Proyectos</a></li>
+                    <li><a href="experiencia.html">Experiencia</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="cv.html">CV</a></li>
                 </ul>
             </nav>
         </header>
+
+        <main class="contenido">
+            <h2>En construcción ...</h2>
+        </main>
+
+        <footer class="header centrar-texto">
+            <h2 class="footer-titulo">Contacto</h2>
+            <div class="contacto">
+                <a href="https://www.instagram.com/juankka18/" target="_blank"><img src="img/instragam.svg" alt="icono instragam"></a>
+                <a href="https://www.linkedin.com/in/juan-carlos-canosa-su%C3%A1rez-a367391b2/" target="_blank"><img src="img/linkedin.svg" alt="icono linkedin"></a>
+                <a href="https://github.com/JCCanosa" target="_blank"><img src="img/github.svg" alt="icono github"></a>
+                <a href="mailto:jcanosa1988@gmail.com" target="_blank"><img src="img/email.svg" alt="icono email"></a>
+            </div>
+        </footer>
+    </div>
+</body>
+</html>
