Construccion Seccion Proyectos y ajustes

--- a/formacion.html
+++ b/formacion.html
@@ -33,7 +33,6 @@
                     <li><a href="index.html">Presentación</a></li>
                     <li><a href="formacion.html">Formación</a></li>
                     <li><a href="proyectos.html">Proyectos</a></li>
-                    <li><a href="experiencia.html">Experiencia</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                     <li><a href="cv.html">CV</a></li>
                 </ul>
@@ -41,33 +40,33 @@
         </header>
 
         <main class="formacion">
-            <fieldset>
-                <legend>Formación reglada</legend>
+            <div class="reglada centrar-texto">           
+                <h2>Formación Reglada</h2>
                 <ul>
                     <li>Educación Secundaria Obligatoria (ESO)</li>
                     <li>Prueba de acceso a CFGS</li>
                     <li>CFGS Desarrollo de aplicaciones Web - (Cursando actualmente)</li>
                     <li>CFGS Desarrollo de aplicaciones Multiplataforma - (Cursando actualmente)</li>
                 </ul>
-            </fieldset>
-        
-            <fieldset>
-                <legend>Formación adicional</legend>
+            </div>
+
+            <div class="cursos centrar-texto">
+                <h2>Cursos</h2>
                 <ul>
                     <li>Cobol - Udemy - <span class="certificados"><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-df9e92de-bde3-44a1-bdff-c01a3af7bfe4.jpg?v=1634073127000" target="_blank">certificado</a></span></li>
                     <li>Responsive web Design - freeCodeCamp - <span class="certificados"><a href="https://www.freecodecamp.org/espanol/certification/JCCanosa88/responsive-web-design" target="_blank">certificado</a></span></li>
                     <li>Desarrollo Web Completo (actualmente) - Udemy - <span class="certificados"><a href="https://www.udemy.com/course/desarrollo-web-completo-con-html5-css3-js-php-y-mysql/" target="_blank">Ver curso</a></span></li>
                 </ul>
-            </fieldset>
+            </div>
         </main>
 
         <footer class="header centrar-texto">
             <h2 class="footer-titulo">Contacto</h2>
             <div class="contacto">
-                <a href="https://www.instagram.com/juankka18/" target="_blank"><img src="img/instragam.svg" alt="icono instragam"></a>
-                <a href="https://www.linkedin.com/in/juan-carlos-canosa-su%C3%A1rez-a367391b2/" target="_blank"><img src="img/linkedin.svg" alt="icono linkedin"></a>
-                <a href="https://github.com/JCCanosa" target="_blank"><img src="img/github.svg" alt="icono github"></a>
-                <a href="mailto:jcanosa1988@gmail.com" target="_blank"><img src="img/email.svg" alt="icono email"></a>
+                <a class="icono-contacto" href="https://www.instagram.com/juankka18/" target="_blank"><img src="img/instragam.svg" alt="icono instragam"></a>
+                <a class="icono-contacto" href="https://www.linkedin.com/in/juan-carlos-canosa-su%C3%A1rez-a367391b2/" target="_blank"><img src="img/linkedin.svg" alt="icono linkedin"></a>
+                <a class="icono-contacto" href="https://github.com/JCCanosa" target="_blank"><img src="img/github.svg" alt="icono github"></a>
+                <a class="icono-contacto" href="mailto:jcanosa1988@gmail.com" target="_blank"><img src="img/email.svg" alt="icono email"></a>
             </div>
         </footer>
     </div>
