--- a/proyectos.html
+++ b/proyectos.html
@@ -33,7 +33,6 @@
                     <li><a href="index.html">Presentación</a></li>
                     <li><a href="formacion.html">Formación</a></li>
                     <li><a href="proyectos.html">Proyectos</a></li>
-                    <li><a href="experiencia.html">Experiencia</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                     <li><a href="cv.html">CV</a></li>
                 </ul>
@@ -41,16 +40,107 @@
         </header>
 
         <main class="contenido">
-            <h2>En construcción ...</h2>
+            <h2>Proyectos Personales</h2>
+            <div class="proyectos">
+                <div class="proyecto">
+                    <a href="https://festivalmusicaejudemy.netlify.app/" target="_blank">
+                        <div class="imagen-proyecto">
+                            <img src="img/festivalMusica.png" alt="Imagen Web Festival Musica">
+                        </div>
+                        <footer>Rock & EDM Festival</footer>
+                    </a>
+                </div>
+
+                <div class="proyecto">
+                    <a href="appSalon.html">
+                        <div class="imagen-proyecto">
+                            <img src="img/AppSalon/index.png" alt="Imagen Web AppSalon">
+                        </div>
+                        <footer>AppSalón MVC</footer>
+                    </a>
+                </div>
+
+                <div class="proyecto">
+                    <a href="bienesRaices.html">
+                        <div class="imagen-proyecto">
+                            <img src="img/BienesRaices/paginaPrincipal.png" alt="Imagen Web BienesRaices">
+                        </div>
+                        <footer>Bienes Raíces</footer>
+                    </a>
+                </div>
+
+                <div class="proyecto">
+                    <a href="https://blogascoffee.netlify.app/">
+                        <div class="imagen-proyecto">
+                            <img src="img/blogCafe.png" alt="Imagen Web blogCafe">
+                        </div>
+                        <footer>Blog Café</footer>
+                    </a>
+                </div>
+                
+                <div class="proyecto">
+                    <a href="https://tiendabase.netlify.app/">
+                        <div class="imagen-proyecto">
+                            <img src="img/tiendaCamisetas.png" alt="Imagen Web tiendaCamisetas">
+                        </div>
+                        <footer>Tienda Camisetas</footer>
+                    </a>
+                </div>
+
+                <div class="proyecto">
+                    <a href="https://landingpage-jbl.netlify.app/">
+                        <div class="imagen-proyecto">
+                            <img src="img/landingPageJbl.png" alt="Imagen Web Landing JBL">
+                        </div>
+                        <footer>Landing JBL</footer>
+                    </a>
+                </div>
+
+                <div class="proyecto">
+                    <a href="https://tributorayden.netlify.app/">
+                        <div class="imagen-proyecto">
+                            <img src="img/tributoRayden.png" alt="Imagen tributoRayden">
+                        </div>
+                        <footer>Página Tributo Rayden</footer>
+                    </a>
+                </div>
+
+                <div class="proyecto">
+                    <a href="https://docjs.netlify.app/">
+                        <div class="imagen-proyecto">
+                            <img src="img/documentacionJS.png" alt="Imagen Web documentacionJS">
+                        </div>
+                        <footer>Documentación JS</footer>
+                    </a>
+                </div>
+
+                <div class="proyecto">
+                    <a href="https://ejemplocontactofreelance.netlify.app/">
+                        <div class="imagen-proyecto">
+                            <img src="img/freelance.png" alt="Imagen Web contactoFreelance">
+                        </div>
+                        <footer>Contacto Freelance</footer>
+                    </a>
+                </div>
+
+                <div class="proyecto">
+                    <a href="https://encprogramacion.netlify.app/">
+                        <div class="imagen-proyecto">
+                            <img src="img/encuestaProg.png" alt="Imagen Web encprogramacion">
+                        </div>
+                        <footer>Encuesta Programación</footer>
+                    </a>
+                </div>
+            </div>
         </main>
 
         <footer class="header centrar-texto">
             <h2 class="footer-titulo">Contacto</h2>
             <div class="contacto">
-                <a href="https://www.instagram.com/juankka18/" target="_blank"><img src="img/instragam.svg" alt="icono instragam"></a>
-                <a href="https://www.linkedin.com/in/juan-carlos-canosa-su%C3%A1rez-a367391b2/" target="_blank"><img src="img/linkedin.svg" alt="icono linkedin"></a>
-                <a href="https://github.com/JCCanosa" target="_blank"><img src="img/github.svg" alt="icono github"></a>
-                <a href="mailto:jcanosa1988@gmail.com" target="_blank"><img src="img/email.svg" alt="icono email"></a>
+                <a class="icono-contacto" href="https://www.instagram.com/juankka18/" target="_blank"><img src="img/instragam.svg" alt="icono instragam"></a>
+                <a class="icono-contacto" href="https://www.linkedin.com/in/juan-carlos-canosa-su%C3%A1rez-a367391b2/" target="_blank"><img src="img/linkedin.svg" alt="icono linkedin"></a>
+                <a class="icono-contacto" href="https://github.com/JCCanosa" target="_blank"><img src="img/github.svg" alt="icono github"></a>
+                <a class="icono-contacto" href="mailto:jcanosa1988@gmail.com" target="_blank"><img src="img/email.svg" alt="icono email"></a>
             </div>
         </footer>
     </div>
