--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
                     <li><a href="index.html">Presentación</a></li>
                     <li><a href="formacion.html">Formación</a></li>
                     <li><a href="proyectos.html">Proyectos</a></li>
-                    <li><a href="experiencia.html">Experiencia</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                     <li><a href="cv.html">CV</a></li>
                 </ul>
@@ -57,10 +56,10 @@
         <footer class="header centrar-texto">
             <h2 class="footer-titulo">Contacto</h2>
             <div class="contacto">
-                <a href="https://www.instagram.com/juankka18/" target="_blank"><img src="img/instragam.svg" alt="icono instragam"></a>
-                <a href="https://www.linkedin.com/in/juan-carlos-canosa-su%C3%A1rez-a367391b2/" target="_blank"><img src="img/linkedin.svg" alt="icono linkedin"></a>
-                <a href="https://github.com/JCCanosa" target="_blank"><img src="img/github.svg" alt="icono github"></a>
-                <a href="mailto:jcanosa1988@gmail.com" target="_blank"><img src="img/email.svg" alt="icono email"></a>
+                <a class="icono-contacto" href="https://www.instagram.com/juankka18/" target="_blank"><img src="img/instragam.svg" alt="icono instragam"></a>
+                <a class="icono-contacto" href="https://www.linkedin.com/in/juan-carlos-canosa-su%C3%A1rez-a367391b2/" target="_blank"><img src="img/linkedin.svg" alt="icono linkedin"></a>
+                <a class="icono-contacto" href="https://github.com/JCCanosa" target="_blank"><img src="img/github.svg" alt="icono github"></a>
+                <a class="icono-contacto" href="mailto:jcanosa1988@gmail.com" target="_blank"><img src="img/email.svg" alt="icono email"></a>
             </div>
         </footer>
     </div>
