--- a/proyectos.html
+++ b/proyectos.html
@@ -105,6 +105,16 @@
                 </div>
 
                 <div class="imagen-proyecto">
+                    <a href="https://calc-porcentaje-aciertos.netlify.app/" target="_blank">
+                        <picture>
+                            <source srcset="/img/calcPorcentajes.webp" type="image/webp">
+                            <img loading="lazy" src="/img/calcPorcentajes.png" alt="portada calcPorcentajes">
+                        </picture>
+                        <figcaption>Calculadora Procentajes Aciertos/Fallos</figcaption>
+                    </a>
+                </div>
+
+                <div class="imagen-proyecto">
                     <a href="https://landingpage-jbl.netlify.app/" target="_blank">
                         <picture>
                             <source srcset="/img/landingPageJbl.webp" type="image/webp">
